Project section styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 :root {
-  --background-color: #241627;
+  /* dark  */
+  --background-color: #383d31;
+  --btn--color: white;
+  --btn--text: #241627;
+  --project-card-bg: #ffffff00;
+  --text-color: #241627;
+  --form-text-color: #555;
+  --footer-test-color: #888;
+}
+
+[data-theme="light"] {
+  --background-color: #d0d0c0;
   --btn--color: white;
   --btn--text: #241627;
   --project-card-bg: #ffffff00;
@@ -8,12 +19,56 @@
   --footer-test-color: #888;
 }
 
-[data-theme="light"] {
-  --background-color: #241627;
-  --btn--color: white;
-  --btn--text: #241627;
-  --project-card-bg: #ffffff00;
-  --text-color: #fef507;
-  --form-text-color: #555;
-  --footer-test-color: #888;
+body {
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 60px;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+h1,
+h2,
+h3,
+p {
+  color: var(--text-color);
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  font-family: Silkscreen, sans-serif;
+  font-size: 3em;
+}
+
+h2,
+h3 {
+  font-size: 1.2em;
+}
+
+h2,
+h3,
+p {
+  font-family: Amethysta, monospace;
+}
+
+h1,
+h2 {
+  text-transform: uppercase;
+}
+p {
+  font-size: 1.1em;
+}
+
+.section-title {
+  margin-bottom: 30px;
+}
+
+.hove {
+  cursor: pointer;
 }
