--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
 :root {
   /* dark  */
-  --background-color: #383d31;
+  --background-color: black;
   --btn--color: white;
-  --btn--text: #241627;
-  --project-card-bg: #ffffff00;
-  --text-color: #241627;
-  --form-text-color: #555;
-  --footer-test-color: #888;
+  --btn--text: black;
+  --project-card-bg: white;
+  --text-color: white;
+  --form-text-color: white;
+  --footer-test-color: white;
 }
 
 [data-theme="light"] {
-  --background-color: #d0d0c0;
-  --btn--color: white;
-  --btn--text: #241627;
-  --project-card-bg: #ffffff00;
-  --text-color: #fef507;
-  --form-text-color: #555;
-  --footer-test-color: #888;
+  --background-color: white;
+  --btn--color: wblack;
+  --btn--text: white;
+  --project-card-bg: black;
+  --text-color: black;
+  --form-text-color: black;
+  --footer-test-color: black;
 }
 
 body {
@@ -37,38 +37,73 @@ h2,
 h3,
 p {
   color: var(--text-color);
-  padding: 0;
   margin: 0;
-}
-
-h1 {
-  font-family: Silkscreen, sans-serif;
-  font-size: 3em;
-}
-
-h2,
-h3 {
-  font-size: 1.2em;
+  padding: 0;
 }
 
 h2,
 h3,
 p {
-  font-family: Amethysta, monospace;
+  font-family: "Amethysta", monospace;
 }
 
 h1,
 h2 {
   text-transform: uppercase;
 }
-p {
-  font-size: 1.1em;
+
+h2,
+h3 {
+  font-size: 20px;
 }
 
-.section-title {
+h1 {
+  font-family: "Silkscreen", sans-serif;
+  font-size: 32px;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.sectionTitle {
   margin-bottom: 30px;
 }
 
-.hove {
+.hover {
   cursor: pointer;
+}
+
+@media (width >= 800px) {
+  #root {
+    gap: 100px;
+  }
+  h1 {
+    font-size: 40px;
+  }
+  h2,
+  h3 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 20px;
+  }
+
+  .sectionTitle {
+    margin-bottom: 60px;
+  }
+
+  @media (width >= 1400px) {
+    #root {
+      gap: 200px;
+    }
+    h1 {
+      font-size: 48px;
+    }
+
+    .sectionTitle {
+      margin-bottom: 75px;
+    }
+  }
 }
