--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -1,9 +1,12 @@
-.heroSection {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 20px;
   text-align: center;
+  height: 100dvh;
+  min-height: 500px;
+  widhth: 50%;
 
   .hero {
     max-width: 200px;
@@ -28,74 +31,37 @@
     align-self: center;
   }
 
-  /* CSS */
-  .button {
-    background-color: #9e7aff;
-    border: 0 solid #e5e7eb;
-    box-sizing: border-box;
-    color: #000000;
-    display: flex;
-    font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
-      Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-      "Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 700;
-    justify-content: center;
-    line-height: 1.75rem;
-    padding: 0.75rem 1.65rem;
-    position: relative;
-    text-align: center;
-    text-decoration: none #000000 solid;
-    text-decoration-thickness: auto;
-    width: 100%;
-    max-width: 460px;
-    position: relative;
-    cursor: pointer;
-    transform: rotate(-2deg);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+  button {
+    background-color: var(--btn-color);
+    color: var(--btn-text-color);
+    border: none;
+    border-radius: 20px;
+    width: 126px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
   }
 
-  .button:focus {
-    outline: 0;
+  button:hover {
+    transform: scale(1.05);
   }
 
-  .button-53:after {
-    content: "";
-    position: absolute;
-    border: 1px solid #000000;
-    bottom: 4px;
-    left: 4px;
-    width: calc(100% - 1px);
-    height: calc(100% - 1px);
+  button:active {
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   }
-
-  .button-53:hover:after {
-    bottom: 2px;
-    left: 2px;
-  }
-
-  @media (min-width: 768px) {
-    .button-53 {
-      padding: 0.75rem 3rem;
-      font-size: 1.25rem;
-    }
-  }
-}
-
-.hero {
-  border-radius: 10000px;
-  width: 25rem;
 }
 
 .colorModeContainer {
-  display: relative;
+  position: relative;
 }
 
 .colorMode {
   position: absolute;
+  right: 0;
+  width: 25px;
 }
 
 .colorMode:hover {
@@ -104,12 +70,32 @@
 
 .description {
   max-width: 24ch;
-  align-self: center;
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 20px;
+}
+
+@media (width >= 800px) {
+  .container {
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+
+    .hero {
+      max-width: 350px;
+      width: 350px;
+    }
+  }
+}
+
+@media (width >= 1400px) {
+  .container {
+    .hero {
+      max-width: 400px;
+      width: 400px;
+    }
+  }
 }
