--- a/src/components/Projects/ProjectsStyles.module.css
+++ b/src/components/Projects/ProjectsStyles.module.css
@@ -27,4 +27,14 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  margin-top: 20px;
+}
+
+@media (width >= 800px) {
+  .projectsContainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 0 30px;
+  }
 }
