--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 [data-theme="light"] {
   --background-color: white;
-  --btn--color: wblack;
+  --btn--color: black;
   --btn--text: white;
   --project-card-bg: black;
   --text-color: black;
