--- a/src/components/Projects/ProjectsStyles.module.css
+++ b/src/components/Projects/ProjectsStyles.module.css
@@ -7,6 +7,9 @@
     max-width: 250px;
     align-self: center;
     background-color: var(--project-card-bg);
+    border-radius: 100000px;
+    margin-bottom: 10px;
+    border: 1px solid var(--project-card-border);
   }
 
   a {
