--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -16,14 +16,15 @@
     letter-spacing: 1px;
     line-height: 2;
     .textAI {
-      background-image: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNjJ6bHNyZWoxbHFrbzZqc2FpOWd2d2xxNXF2YmRjb3VpNW01dG4yNyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yTi5DsRe7ursOPkwWc/giphy.webp);
+      background-image: url(https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnhqa2U3ZnpjNTl0d2c0d2p4MmdqaXAwZ3ppeDhrbDd4eTF5YWh2bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l4FGvSp3TTYKvJRVm/giphy.webp);
       background-size: cover;
       color: transparent;
       -moz-background-clip: text;
       -webkit-background-clip: text;
       font-size: 30px;
       margin: 10px 0;
-      font-family: Silkscreen;
+      font-family: Rowdies, sans-serif;
+      font-weight: 700;
       -webkit-text-stroke: 1px var(--ai-text-shadow);
     }
   }
