--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -51,6 +51,7 @@
   .hero {
     max-width: 200px;
     border-radius: 100000px;
+    border: 1px solid var(--project-card-border);
   }
   span {
     display: flex;
